--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -16,8 +16,8 @@ set -sg escape-time 0
 set -g history-limit 50000
 
 # improve colors
-#set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
